# takopi-matrix

./: .gitignore  CHANGELOG.md  Justfile  README.md  pyproject.toml
.claude/rules/: state-migration.md  tests-alongside.md
docs/: matrix.md
docs/development/: testing.md
src/takopi_matrix/: __init__.py  availability.py  backend.py  bridge.py  chat_sessions.py  cli.py  client.py  crypto.py  engine_defaults.py  engine_overrides.py  files.py  markdown.py  onboarding.py  progress.py  render.py  room_prefs.py  room_projects.py  state_store.py  thread_state.py  trigger_mode.py  types.py  verify_device.py
src/takopi_matrix/_compat/: __init__.py  backends_helpers.py  commands.py  config.py  engines.py  ids.py  logging.py  markdown.py  paths.py  progress.py  scheduler.py  settings.py
src/takopi_matrix/bridge/: __init__.py  (+6 more)
tests/: test_matrix_backend.py  test_matrix_bridge.py  test_matrix_bridge_cancel.py  test_matrix_bridge_dispatch.py  test_matrix_bridge_events.py  test_matrix_bridge_executor.py  test_matrix_client.py  test_matrix_command_sessions.py  test_matrix_crypto.py  test_matrix_crypto_module.py  test_matrix_engine_defaults.py  test_matrix_engine_overrides.py  test_matrix_files.py  test_matrix_markdown.py  test_matrix_onboarding.py  test_matrix_onboarding_rooms.py  test_matrix_render.py  test_matrix_room_prefs.py  test_matrix_room_projects.py  test_matrix_runtime_sessions.py  test_matrix_sessions.py  test_matrix_state_migration.py  test_matrix_transcription.py  test_matrix_transport.py  test_matrix_trigger_mode.py  test_matrix_types.py  test_verify_device.py
(+13 files in other folders)
